[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/hud.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Game" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundModulator" type="ColorRect" parent="Game"]
margin_right = 1024.0
margin_bottom = 576.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="HBoxContainer" parent="Game/VBoxContainer"]
margin_right = 40.0

[node name="Mutations" type="HBoxContainer" parent="Game/VBoxContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 4.0

[node name="Pause" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
modulate = Color( 0, 0, 0, 0.305882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.7269
margin_top = -212.49
margin_right = 30.2731
margin_bottom = 73.5099
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
custom_constants/separation = 17
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="Pause/HBoxContainer"]
margin_right = 114.0
margin_bottom = 14.0
text = "Master Volume"
align = 1
valign = 2

[node name="MasterVolumeSlider" type="HSlider" parent="Pause/HBoxContainer"]
margin_top = 31.0
margin_right = 114.0
margin_bottom = 47.0
value = 100.0

[node name="MusicVolumeLabel" type="Label" parent="Pause/HBoxContainer"]
margin_top = 64.0
margin_right = 114.0
margin_bottom = 78.0
text = "Music Volume"
align = 1

[node name="MusicVolumeSlider" type="HSlider" parent="Pause/HBoxContainer"]
margin_top = 95.0
margin_right = 114.0
margin_bottom = 111.0
value = 100.0

[node name="SoundFXLabel" type="Label" parent="Pause/HBoxContainer"]
margin_top = 128.0
margin_right = 114.0
margin_bottom = 142.0
text = "Sound FX Volume"
align = 1

[node name="SoundFXSlider" type="HSlider" parent="Pause/HBoxContainer"]
margin_top = 159.0
margin_right = 114.0
margin_bottom = 175.0
value = 100.0

[node name="SettingsButton" type="Button" parent="Pause/HBoxContainer"]
margin_top = 192.0
margin_right = 114.0
margin_bottom = 212.0
text = "Settings"

[node name="MenuButton" type="Button" parent="Pause/HBoxContainer"]
margin_top = 229.0
margin_right = 114.0
margin_bottom = 249.0
text = "Quit to Menu"

[node name="DesktopButton" type="Button" parent="Pause/HBoxContainer"]
margin_top = 266.0
margin_right = 114.0
margin_bottom = 286.0
text = "Quit to Desktop"

[node name="MainMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MainMenu"]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -24.0
margin_right = 20.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="MainMenu/VBoxContainer"]
margin_right = 63.0

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 4.0
margin_right = 63.0
margin_bottom = 24.0
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 63.0
margin_bottom = 48.0
text = "Settings"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 52.0
margin_right = 63.0
margin_bottom = 72.0
text = "Quit"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -26.0
margin_right = 39.0
margin_bottom = 26.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="Settings/VBoxContainer"]
margin_right = 78.0
margin_bottom = 20.0
text = "Fullscreen"

[node name="BackButton" type="Button" parent="Settings/VBoxContainer"]
margin_top = 32.0
margin_right = 78.0
margin_bottom = 52.0
text = "Back"

[node name="Death" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundModulator" type="ColorRect" parent="Death"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Death"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.0
margin_top = -20.0
margin_right = 22.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MutationButton1" type="Button" parent="Death/HBoxContainer"]
margin_right = 12.0
margin_bottom = 40.0

[node name="MutationButton2" type="Button" parent="Death/HBoxContainer"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 40.0

[node name="MutationButton3" type="Button" parent="Death/HBoxContainer"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 40.0
[connection signal="value_changed" from="Pause/HBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="Pause/HBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="Pause/HBoxContainer/SoundFXSlider" to="." method="_on_SoundFXSlider_value_changed"]
[connection signal="pressed" from="Pause/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Pause/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Pause/HBoxContainer/DesktopButton" to="." method="_on_DesktopButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Settings/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Death/HBoxContainer/MutationButton1" to="." method="_on_MutationButton1_pressed"]
[connection signal="pressed" from="Death/HBoxContainer/MutationButton2" to="." method="_on_MutationButton2_pressed"]
[connection signal="pressed" from="Death/HBoxContainer/MutationButton3" to="." method="_on_MutationButton3_pressed"]
